--- a/menu.html
+++ b/menu.html
@@ -6,8 +6,8 @@
     <title>THE CLYDE</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="apple-touch-icon" href="favicon.png">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./menu.css">
 </head>
 <body id="top">
 <header>
