--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 </nav>
 
 
-<p class="visual"><img src="img/main-image.png" alt="創業1963年"></p>
+<p class="visual"><img src="./main-image.png" alt="創業1963年"></p>
 
 <main class="container">
 <section class="text">
     <ul>
-        <li><img src="img/drink-icon.png" alt="人気のドリンク"></li>
-        <li><img src="img/cook-icon.png" alt="人気の料理"></li>
-        <li><img src="img/view-icon.png" alt="最高の眺め"></li>
+        <li><img src="./drink-icon.png" alt="人気のドリンク"></li>
+        <li><img src="./cook-icon.png" alt="人気の料理"></li>
+        <li><img src="./view-icon.png" alt="最高の眺め"></li>
     </ul>
     <h2>LOUNGE &amp; DRINKERY</h2>
     <p>創作カクテルや世界各国のビール、お気に入りの空間をお求めなら、カクテルバー「CHICHI」へどうぞ。ロビーにあるラウンジでは、コーヒーや軽食を用意していますので、ちょっとしたランチにもどうぞ。お友達を誘って、楽しいひとときをお過ごしください。</p>
@@ -42,14 +42,14 @@
 <section class="event">
     <h2>本日のイベント</h2>
     <ul>
-        <li><img src="img/today-special.png" alt="TODAY ￥7500 SPECIAL マイク・ウォード＆ロブ・トーマス アコースティックショー 20時～23時"></li>
-        <li><img src="img/summer.png" alt="夏のひとときを楽しむ"></li>
-        <li><img src="img/menu-day.png" alt="MENU OFTHE DAY ローストチキン フルーツ＆アイスクリーム 赤ワイングラス"></li>
+        <li><img src="./today-special.png" alt="TODAY ￥7500 SPECIAL マイク・ウォード＆ロブ・トーマス アコースティックショー 20時～23時"></li>
+        <li><img src="./summer.png" alt="夏のひとときを楽しむ"></li>
+        <li><img src="./menu-day.png" alt="MENU OFTHE DAY ローストチキン フルーツ＆アイスクリーム 赤ワイングラス"></li>
     </ul>
 </section>
 
 <aside class="reserve">
-<p><a href="#"><img src="img/reserve.png" alt="ご予約はこちら"></a></p>
+<p><a href="#"><img src="./reserve.png" alt="ご予約はこちら"></a></p>
 </aside>
 
 </main>
@@ -58,15 +58,15 @@
         <h2>営業時間</h2>
         <p>6時〜23時（午後11時）</p>
     </section>
-<p class="map"><img src="img/end-logo.png" alt="最後のロゴ"></p>
-<p class="map"><img src="img/map.png" alt="地図"></p>
+<p class="map"><img src="./end-logo.png" alt="最後のロゴ"></p>
+<p class="map"><img src="./map.png" alt="地図"></p>
 <address>
-    <img src="img/map-icon.png" alt="#">東京都港区赤坂xx-xx<br>
-    <img src="img/tel-icon.png" alt="#">(03) 9999-9999<br>
-    <img src="img/email-icon.png" alt="#">contact@theclyde.com
+    <img src="./map-icon.png" alt="#">東京都港区赤坂xx-xx<br>
+    <img src="./tel-icon.png" alt="#">(03) 9999-9999<br>
+    <img src="./email-icon.png" alt="#">contact@theclyde.com
 </address>
 <p class="end"><small>©2016 THE CLYDE.<span> ALL RIGHTS RESERVED.</span></small></p>
-<p class="pagetop"><a href="#top"><img src="img/page-top.svg" width="50" height="50" alt="ページトップへ"></a></p>
+<p class="pagetop"><a href="#top"><img src="./page-top.svg" width="50" height="50" alt="ページトップへ"></a></p>
 </footer>
 </body>
 </html>
