--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 </head>
 <body id="top">
 <header>
-<h1><a href="index.html"><img src="img/top-logo.png" alt="THECLYDE"></a></h1>
+<h1><a href="index.html"><img src="./top-logo.png" alt="THECLYDE"></a></h1>
 </header>
 <nav>
     <ul class="container">
@@ -32,21 +32,21 @@
     <h1>本日のメニュー</h1>
     <div class="flex">
     <section>
-        <p><img src="img/photo1.png" alt="#"></p>
+        <p><img src="./photo1.png" alt="#"></p>
         <h2>ローストチキン</h2>
         <p class="text">ローストチキンに使用しているタレは50年受け継がれてきた伝統のタレです。鶏肉は鮮度の一番良い朝引きの水郷どり。本格的なローストチキン料理をご堪能ください。</p>
         <p class="price">&yen;3,700</p>
         <p class="button"><a href="#">メインディッシュへ</a></p>
     </section>
     <section>
-        <p><img src="img/photo2.png" alt="#"></p>
+        <p><img src="./photo2.png" alt="#"></p>
         <h2>フルーツ&#xFF06;アイスクリーム</h2>
         <p class="text">素材にこだわり厳選した高品質フルーツと濃厚なアイスクリームの優雅な甘さのハーモニー。香り高く芳醇な味わいとリッチな味わいが絶妙に調和した贅沢なデザートです。</p>
         <p class="price">&yen;1,800</p>
         <p class="button"><a href="#">デザートへ</a></p>
     </section>
     <section>
-        <p><img src="img/photo3.png" alt="#"></p>
+        <p><img src="./photo3.png" alt="#"></p>
         <h2>赤ワイングラス</h2>
         <p class="text">十分な糖度と豊かな果実味、主張しすぎない渋味が備わった、魅力的なワイン。繊細な口当たりと熟した果実の風味とともに、穏やかな酸とミネラルが広がっていきます。</p>
         <p class="price">&yen;1,500</p>
@@ -55,7 +55,7 @@
     </div>
 </article>
 <aside class="reserve">
-<p><a href="#"><img src="img/reserve.png" alt="ご予約はこちら"></a></p>
+<p><a href="#"><img src="./reserve.png" alt="ご予約はこちら"></a></p>
 </aside>
 
 </main>
@@ -64,15 +64,15 @@
         <h2>営業時間</h2>
         <p>6時〜23時（午後11時）</p>
     </section>
-<p class="map"><img src="img/end-logo.png" alt="最後のロゴ"></p>
-<p class="map"><img src="img/map.png" alt="地図"></p>
+<p class="map"><img src="./end-logo.png" alt="最後のロゴ"></p>
+<p class="map"><img src="./map.png" alt="地図"></p>
 <address>
-    <img src="img/map-icon.png" alt="#">東京都港区赤坂xx-xx<br>
-    <img src="img/tel-icon.png" alt="#">(03) 9999-9999<br>
-    <img src="img/email-icon.png" alt="#">contact@theclyde.com
+    <img src="./map-icon.png" alt="#">東京都港区赤坂xx-xx<br>
+    <img src="./tel-icon.png" alt="#">(03) 9999-9999<br>
+    <img src="./email-icon.png" alt="#">contact@theclyde.com
 </address>
 <p class="end"><small>©2016 THE CLYDE. ALL RIGHTS RESERVED.</small></p>
-<p class="pagetop"><a href="#top"><img src="img/page-top.svg" width="50" height="50" alt="ページトップへ"></a></p>
+<p class="pagetop"><a href="#top"><img src="./page-top.svg" width="50" height="50" alt="ページトップへ"></a></p>
 </footer>
 </body>
 </html>
