--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body id="top">
 <header>
-<h1><a href="index.html"><img src="img/top-logo.png" alt="THECLYDE"></a></h1>
+<h1><a href="index.html"><img src="./top-logo.png" alt="THECLYDE"></a></h1>
 </header>
 <nav>
     <ul class="container">
@@ -81,15 +81,15 @@
         <h2>営業時間</h2>
         <p>6時〜23時（午後11時）</p>
     </section>
-<p class="map"><img src="img/end-logo.png" alt="最後のロゴ"></p>
-<p class="map"><img src="img/map.png" alt="地図"></p>
+<p class="map"><img src="./end-logo.png" alt="最後のロゴ"></p>
+<p class="map"><img src="./map.png" alt="地図"></p>
 <address>
-    <img src="img/map-icon.png" alt="#">東京都港区赤坂xx-xx<br>
-    <img src="img/tel-icon.png" alt="#">(03) 9999-9999<br>
-    <img src="img/email-icon.png" alt="#">contact@theclyde.com
+    <img src="./map-icon.png" alt="#">東京都港区赤坂xx-xx<br>
+    <img src="./tel-icon.png" alt="#">(03) 9999-9999<br>
+    <img src="./email-icon.png" alt="#">contact@theclyde.com
 </address>
 <p class="end"><small>©2016 THE CLYDE. ALL RIGHTS RESERVED.</small></p>
-<p class="pagetop"><a href="#top"><img src="img/page-top.svg" width="50" height="50" alt="ページトップへ"></a></p>
+<p class="pagetop"><a href="#top"><img src="./page-top.svg" width="50" height="50" alt="ページトップへ"></a></p>
 </footer>
 </body>
 </html>
