--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-<h1><a href="index.html"><img src="img/top-logo.png" alt="THECLYDE"></a></h1>
+<h1><a href="index.html"><img src="./top-logo.png" alt="THECLYDE"></a></h1>
 </header>
 <nav>
     <ul class="container">
