--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
     
 </article>
 <aside class="reserve">
-<p><a href="#"><img src="img/reserve.png" alt="ご予約はこちら"></a></p>
+<p><a href="#"><img src="./reserve.png" alt="ご予約はこちら"></a></p>
 </aside>
 
 </main>
